Fix: bound companion menu population and extension lookups